Se conecto el backend con el frontend de paceintes ya lista y elimina

--- a/backend/correos-pacientes/src/main/resources/application.properties
+++ b/backend/correos-pacientes/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=correos-pacientes
+
+# URL del servidor y base de datos (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/medicApp
+
+# Usuario y contraseña de la base de datos
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
+# Driver de PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de Hibernate (Manejo de esquema)
+# update: Actualiza la estructura sin eliminar datos
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar consultas SQL en consola
+spring.jpa.show-sql=true
+
+# Puerto del servidor
+server.port=8085
