--- a/backend/correos-pacientes/src/main/resources/application.properties
+++ b/backend/correos-pacientes/src/main/resources/application.properties
@@ -2,7 +2,18 @@ spring.application.name=correos-pacientes
 
 # URL del servidor y base de datos (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/medicApp
+# Servidor SMTP de Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
 
+# Propiedades SMTP
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 # Usuario y contraseña de la base de datos
 spring.datasource.username=postgres
 spring.datasource.password=123456
