--- a/backend/correos-pacientes/src/main/resources/application.properties
+++ b/backend/correos-pacientes/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/medicApp
 # Servidor SMTP de Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=carlosjavi1887@gmail.com
+spring.mail.password=fycksaenokbsvhta
 
 # Propiedades SMTP
 spring.mail.properties.mail.smtp.auth=true
@@ -14,6 +14,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
 # Usuario y contraseña de la base de datos
 spring.datasource.username=postgres
 spring.datasource.password=123456
