Mejora de estilos

--- a/backend/correos-pacientes/src/main/resources/application.properties
+++ b/backend/correos-pacientes/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/medicApp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=carlosjavi1887@gmail.com
-spring.mail.password=wuqsslmqmadquyym
+spring.mail.password=
 
 # Propiedades SMTP
 spring.mail.properties.mail.smtp.auth=true
